update on home page.

--- a/pages/index.html
+++ b/pages/index.html
@@ -31,8 +31,8 @@
             </ul>
 
             <div class="col-md-3 me-5 text-end">
-                <button type="button" class="btn btn-outline-success me-2 px-4">Login</button>
-                <button type="button" class="btn btn-success px-4">Get started</button>
+                <a href="./userAuth/signIn.html"><button type="button" class="btn btn-outline-success me-2 px-4">Login</button></a>
+                <a href="./userAuth/signUp.html"><button type="button" class="btn btn-success px-4">Get started</button></a>
             </div>
         </header>
     </div>
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="d-grid d-md-flex justify-content-md-start">
-                    <button type="button" class="btn btn-success btn-lg px-4">Get started</button>
+                    <a href="./userAuth/signUp.html"><button type="button" class="btn btn-success btn-lg px-4">Get started</button></a>
                 </div>
             </div>
         </div>
@@ -98,8 +98,9 @@
             <div class="feature col">
                 <div class="feature-icon d-inline-flex align-items-center text-center justify-content-center bg-gradient text-white fs-2 mb-3">
                     <i class='bx bxs-truck me-2 text-green'></i>
+                    <h2 class="text-green fw-bold">Waste pick up</h2>
                 </div>
-                <h2 class="text-green fw-bold">Waste pick up</h2>
+
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="icon-link d-inline-flex text-success align-items-center">
           Learn more
@@ -109,8 +110,9 @@
             <div class="feature col">
                 <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient text-white fs-2 mb-3">
                     <i class='bx bx-recycle me-2 text-green'></i>
+                    <h2 class="text-green fw-bold">Recycling</h2>
                 </div>
-                <h2 class="text-green fw-bold">Recycling</h2>
+
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="icon-link d-inline-flex text-success align-items-center">
           Learn more
@@ -120,8 +122,9 @@
             <div class="feature col">
                 <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient text-white fs-2 mb-3">
                     <i class='bx bx-spray-can me-2 text-green'></i>
+                    <h2 class="text-green fw-bold">Cleaning Service</h2>
                 </div>
-                <h2 class="text-green fw-bold">Cleaning Service</h2>
+
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="icon-link d-inline-flex text-success align-items-center">
           Learn more
@@ -217,7 +220,7 @@
         <div class="col-lg-6 mx-auto">
             <p class="mb-4 pb-3">Sign up now and start making the world a better place.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-light btn-lg px-4 mb-4 gap-3">Get Started</button>
+                <a href="./userAuth/signUp.html"><button type="button" class="btn btn-light btn-lg px-4 mb-4 gap-3">Get Started</button></a>
             </div>
         </div>
         <div class="col-10 col-sm-8 col-lg-5 d-flex position-relative">
